--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "babel-node index.js",
+    "dev": "nodemon --exec babel-node index.js",
+    "commitlint": "commitlint --edit",
+    "version": "conventional-changelog -i CHANGELOG.md -s -r 0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "7.22.15",
+    "@babel/preset-env": "7.22.20",
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
+    "eslint": "8.50.0",
+    "husky": "8.0.3",
+    "lint-staged": "14.0.1",
     "nodemon": "3.0.1"
+  },
+  "dependencies": {
+    "conventional-changelog-cli": "4.1.0"
   }
 }
