--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "eslint": "8.50.0",
     "husky": "8.0.3",
     "lint-staged": "14.0.1",
+    "morgan": "1.10.0",
     "nodemon": "3.0.1"
   },
   "dependencies": {
-    "conventional-changelog-cli": "4.1.0"
+    "conventional-changelog-cli": "4.1.0",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "mongoose": "7.5.3"
   }
 }
